<resources>
    <string name="app_name">LibraryApplication</string>

    <!-- Main Activity -->
    <string name="add_new_book_floatingButton_MAINACTIVITY">Добавить новую книгу</string>
    <!--    -->


    <!-- AddNewBook Activity -->
    <string name="enter_book_title_ADDNEWBOOKACTIVITY">Назва книги</string>
    <string name="enter_author_ADDNEWBOOKACTIVITY">Автор</string>
    <string name="enter_number_of_pages_ADDNEWBOOKACTIVITY">Кількість сторінок</string>
    <string name="enter_genre_ADDNEWBOOKACTVITY">Жанр</string>
    <string name="enter_language_ADDNEWBOOKACTIVITY">Мова</string>
    <string name="enter_url_ADDNEWBOOKACTIVITY">Посилання на книгу</string>
    <string name="add_book_button_ADDNEWBOOKACTIVITY">Зберегти книгу у БД</string>
    <!--    -->

    <!-- BottomNavMenu File -->
    <string name="home_menu_BOTTOMNAVMENU">Головна сторінка</string>
    <string name="add_new_book_menu_BOTTOMNAVMENU">Додати книгу</string>
    <string name="search_nav_BOTTOMNAVMENU">Пошук</string>
    <!--    -->

    <!-- OneLineBook File -->
    <string name="book_title_text_ONELINEBOOK">Назва книги</string>
    <string name="book_author_text_ONELINEBOOK">Автор</string>
    <string name="book_pages_text_ONELINEBOOK">999</string>
    <!--    -->

    <!-- BookDetailsActivity -->
    <string name="edit_book_title_BOOKDETAILSACTIVITY">Назва книги</string>
    <string name="edit_author_BOOKDETAILSACTIVITY">Автор</string>
    <string name="edit_genre_BOOKDETAILSACTIVITY">Жанр</string>
    <string name="edit_language_BOOKDETAILSACTIVITY">Мова</string>
    <string name="edit_number_of_pages_BOOKDETAILSACTIVITY">Кількість сторінок</string>
    <string name="update_book_info_button_BOOKDETAILSACTIVITY">Оновити інформацію</string>
    <string name="delete_book_button_BOOKDETAILSACTIVITY">Видалити книгу</string>
    <string name="read_book_button_BOOKDETAILSACTIVITY">Читати</string>
    <string name="edit_url_BOOKDETAILSACTIVITY">Посилання на книгу</string>
    <!--    -->

    <string name="input_search_text_SEARCHACTIVITY">Пошук</string>
    <string name="search_text_SEARCHACTIVITY">Введіть текст пошуку</string>
    <string name="search_by_title_button_SEARCHACTIVITY">Пошук за назвою</string>
    <string name="search_by_category_button_SEARCHACTIVITY">Пошук за категорією</string>
    <string name="search_by_genre_button_SEARCHACTIVITY">Пошук за жанром</string>
    <string name="search_by_language_button_SEARCHACTIVITY">Пошук за мовою</string>
    <string name="sort_by_min_pages_button_SEARCHACTIVITY">Найменше сторінок</string>
    <string name="sort_by_max_pages_button_SEARCHACTIVITY">Найбільше сторінок</string>

</resources>