<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailsActivity">


    <ImageView
        android:id="@+id/edit_book_image_BOOKDETAILSACTIVITY"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select_image_icon" />

    <EditText
        android:id="@+id/edit_book_title_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_book_title_BOOKDETAILSACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_image_BOOKDETAILSACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_author_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_author_BOOKDETAILSACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_book_title_BOOKDETAILSACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_genre_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_genre_BOOKDETAILSACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_author_BOOKDETAILSACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_language_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_language_BOOKDETAILSACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_genre_BOOKDETAILSACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_number_of_pages_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_number_of_pages_BOOKDETAILSACTIVITY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_language_BOOKDETAILSACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_url_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_url_BOOKDETAILSACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number_of_pages_BOOKDETAILSACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/update_book_info_button_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/update_book_info_button_BOOKDETAILSACTIVITY"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_url_BOOKDETAILSACTIVITY" />

    <Button
        android:id="@+id/delete_book_button_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delete_book_button_BOOKDETAILSACTIVITY"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_book_info_button_BOOKDETAILSACTIVITY" />

    <Button
        android:id="@+id/read_book_button_BOOKDETAILSACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/read_book_button_BOOKDETAILSACTIVITY"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_book_button_BOOKDETAILSACTIVITY" />
</androidx.constraintlayout.widget.ConstraintLayout>