<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewBookActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_ADDNEWBOOKACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <EditText
        android:id="@+id/enter_book_title_ADDNEWBOOKACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_book_title_ADDNEWBOOKACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_author_ADDNEWBOOKACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_author_ADDNEWBOOKACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_book_title_ADDNEWBOOKACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_number_of_pages_ADDNEWBOOKACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_number_of_pages_ADDNEWBOOKACTIVITY"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_language_ADDNEWBOOKACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_genre_ADDNEWBOOKACTVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_genre_ADDNEWBOOKACTVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_author_ADDNEWBOOKACTIVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_language_ADDNEWBOOKACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_language_ADDNEWBOOKACTIVITY"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_genre_ADDNEWBOOKACTVITY"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/add_book_button_ADDNEWBOOKACTIVITY"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_book_button_ADDNEWBOOKACTIVITY"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_number_of_pages_ADDNEWBOOKACTIVITY" />

    <ImageView
        android:id="@+id/select_book_image_ADDNEWBOOKACTIVITY"
        android:layout_width="392dp"
        android:layout_height="228dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/enter_book_title_ADDNEWBOOKACTIVITY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select_image_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>